--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="../heitor oliveira/style.css">
 </head>
@@ -21,36 +23,53 @@
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
-            <div id="social">
-                <a href="#"><img src="img/logo-youtube.jpg" alt="youtube"></a>
-                <a href="#"><img src="img/logo-instagram.jpg" alt="instagram"></a>
-                <a href="#"><img src="img/logo-github.jpg" alt="github"></a>
-            </div>
         </nav>
     </header>
     <main>
         <section id="hero">
-            <div id="eu">
+            <div id="social">
+                <a href="#"><img src="img/instagram-logo.svg" alt="Instagram"></a>
+                <a href="#"><img src="img/whatsapp.svg" alt="whatsapp"></a>
+                <a href="#"><img src="img/github.svg" alt="github"></a>
+                <a href="#"><img src="img/linkeding-logo.svg" alt="Linkedin"></a>
+            </div>
+            <div>
                 <h1>Heitor Oliveira</h1>
                 <h2>Desenvolvedor Web</h2>
                 <p>Desenvolvimento de sites, automação inteligente e estratégias para destacar sua empresa no Google.</p>
             </div>
-            <div id="profile"><img src="img/profile.JPG" alt="Heitor Oliveira"></div>
         </section>
         <section id="servicos">
-            <div class="item"><img src="img/briefing.svg" alt="Briefing">
-                <h2>Briefing</h2>
-                <p>Nessa etapa, coletamos informações essenciais para garantir que tudo seja criado com propósito e alinhado à sua visão.</p>
+            <div>
+                <h2>Fluxo de projeto</h2>
+                <p>Saiba mais sobre meu fluxo de projeto</p>
             </div>
-            <div class="item"><img src="img/estudo.svg" alt="Estudo">
-                <h2>Estudo</h2>
-                <p>Aqui definimos as melhores estratégias de layout, conteúdo, automação e posicionamento no Google para alcançar resultados reais.</p>
+            <div id="servicos-container">
+                <div class="servico">
+                    <img src="img/briefing.svg" alt="Briefing">
+                    <h3>Briefing</h3>
+                    <p>Entender o que o cliente deseja e quais são suas necessidades.</p>
+                </div>
+                <div class="servico">
+                    <img src="img/estudo.svg" alt="Briefing">
+                    <h3>Planejamento</h3>
+                    <p>Planejar o projeto, definir prazos e metas.</p>
+                </div>
+                <div class="servico">
+                    <img src="img/construction.svg" alt="Briefing">
+                    <h3>Desenvolvimento</h3>
+                    <p>Desenvolver o projeto, criar o layout e programar as funcionalidades.</p>
+                </div>  
             </div>
-            <div class="item"><img src="img/construction.svg" alt="Construção">
-                <h2>Construção</h2>
-                <p>Hora de colocar a mão na massa. Desenvolvemos seu site com foco em performance, experiência do usuário e identidade visual da sua marca. Tudo pensado para ser funcional, bonito e eficiente.</p>
-            </div>
-
+            <button>Fale comigo agora</button>  
+        </section>
+        <section id="sobre">
+            <h3>Sobre mim</h3>
+            <h2>Heitor Oliveira</h2>
+            <div id="profile"><img src="img/profile1-1.png" alt="Heitor Oliveira"></div>
+            <div class="texto"><p>Obcecado por tecnologias, desde jovem sempre fui movido pela curiosidade de entender como as coisas funcionam — especialmente no mundo digital. Ao longo dos anos, transformei essa paixão em profissão, ajudando empresas a se posicionarem online de forma estratégica, com sites inteligentes, automações que economizam tempo e presença sólida no Google.
+                Meu foco é criar soluções práticas, que gerem resultados reais para negócios que querem crescer com a internet.</p></div>    
+            <button>Saiba mais sobre mim</button>  
         </section>
     <script>
         function clickMenu(){
@@ -60,7 +79,6 @@
                 menu.style.display = "block"
             }
         }
-
     </script>
 </body>
 </html>
