--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </section>
         <section id="servicos">
             <div>
+              <p>Saiba mais sobre</p>
                 <h2>Fluxo de projeto</h2>
-                <p>Saiba mais sobre meu fluxo de projeto</p>
             </div>
             <div id="servicos-container">
                 <div class="servico">
