Algumas correções foram feitas

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
             </div>
             <button class="contact">Fale comigo agora</button>          
         </section>
+        <section>
+          <h3>Saiba mais sobre</h3>
+          <h2>Serviços</h2>
+          <div>
+            <img src="img/servico1.1.jpg" alt="">
+          </div>
+        </section>
     <script>
         function clickMenu(){
             if(menu.style.display == "block"){
