Adicionei seção contato
Provisorio

--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
             </div>
             <button class="contact">Fale comigo agora</button>          
         </section>
-        <section>
-          <h3>Saiba mais sobre</h3>
-          <h2>Serviços</h2>
-          <div>
-            <img src="img/servico1.1.jpg" alt="">
-          </div>
+        <section id="contato">
+          <h3>Contato</h3>
+          <h2>Fale comigo agora</h2>
+          <form action="https://formsubmit.co/heitorbolisw4@outlook.com">
+            <input type="text" name="name" placeholder="Nome" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <textarea name="text" id="itext">Digite sua mensagem</textarea>
+            <button type="submit">Enviar</button>
+          </form>
         </section>
     <script>
         function clickMenu(){
